<resources>
    <string name="app_name">UniTeach</string>
    <string name="uni_hint">University email</string>
    <string name="password_hint">Password</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="action_setting_btn">Settings</string>
    <string name="reg_confirm_pass">Confirm Password</string>
    <string name="reg_btn">Create Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="logo_image">logodesc</string>
    <string name="setup_name_hint">Name</string>
    <string name="setup_univeristy_text">Name of University</string>
    <string name="setup_btn_name_text">Save Account</string>
    <string name="post_desc_hint">Description</string>
    <string name="new_post_btn">Post</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_home">Home</string>
    <string name="tab_text_tutor">Tutor</string>
    <string name="tab_text_bookselling">Book Selling</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post_btn">Add</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_tutor_text">Tutor</string>
    <string name="bottom_book_selling_text">Book Selling</string>
    <string name="buttom_home_text">Home</string>
    <string name="buttom_tutor_text">Notifications</string>
    <string name="buttom_book_selling_text">Account</string>
    <string name="setup_name_text">Name</string>
    <string name="setup_university_text">Name of University</string>
    <string name="setup_btn_hint">Save Settings</string>
    <string name="new_post_btn_hint">Post</string>
    <string name="description_text">Description ..</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="post_username">Username</string>
    <string name="image_post">Post Image</string>
    <string name="forgot_txt">Forgot Password?</string>
    <string name="reset_password">Confirm</string>
    <string name="email_hint">Email</string>
    <string name="tutor_apply_btn">APPLY HERE!</string>
    <string name="new_book_image">new book</string>
    <string name="book_details_btn">See Details</string>
    <string name="book_title">Book Title</string>
    <string name="book_edition">Book Edition</string>
    <string name="book_price">Book Price</string>
    <string name="new_book_btn">Add New Book</string>
    <string name="tutor_name">Tutor Name</string>
    <string name="tutor_approval">tutor approve</string>
    <string name="tutor_disapproval">tutor disapprove</string>

</resources>
